--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravelcollective/html": "5.1.*",
         "styde/html": "~1.0",
         "doctrine/dbal": "^2.5",
-        "graham-campbell/htmlmin": "^4.0"
+        "graham-campbell/htmlmin": "^4.0",        
+        "intervention/image": "~2.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
